APLICAÇÃO FUCKING CONCLUÍDAAAA

--- a/server/views/frontpage.html
+++ b/server/views/frontpage.html
@@ -41,7 +41,8 @@
     </head>
 
     <body>
-        
+       <div id="loader"></div>
+      <div style="display:none;" id="allPageActivity">
          <!-- ***********************************************NAVBAR E TRALHA*************************************************** -->
     <!-- Navigation -->
 
@@ -133,6 +134,7 @@
       </div>
       <!-- /.row -->
 
+     </div>
     </div>
     </body>
 </html>
