--- a/server/views/managepatients.html
+++ b/server/views/managepatients.html
@@ -48,7 +48,8 @@
     </head>
 
     <body>
-        
+               <div id="loader"></div>
+      <div style="display:none;" id="allPageActivity">
          <!-- ***********************************************NAVBAR E TRALHA*************************************************** -->
     <!-- Navigation -->
 
@@ -212,6 +213,7 @@
     </div>
 </div>
 
+</div>
  
   </body>
 </html>
